# pyJudilibre

./: .bumpversion.toml  .env-template  .gitignore  .readthedocs.yml  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  publish-test.yml  publish.yml
docs/: about.md  api.md  docs.requirements.txt  first-steps.md  index.md  installation.md  piste-set-up.md
docs/stylesheets/: extra.css
lib/: pyproject.toml
lib/pyjudilibre/: __init__.py  decorators.py  enums.py  exceptions.py  models.py  pyjudilibre.py
pyjudilibre/: __init__.py  ca_themes.json  cc_themes.json  decorators.py  exceptions.py  models.py  pyjudilibre.py  references.py  utils.py
pyjudilibre/models/: __init__.py  enums.py  models.py
scripts/: build-lib-and-push.sh  build-lib-and-test.sh  bump-version.sh  check-files.sh  format-and-lint.sh  refresh-lib.sh  run-doc-server.sh  run-lib-tests.sh
tests/: .env-template  config.py  test_abridged_queries.py  test_check_taxons.py  test_check_value.py  test_export.py  test_file_download.py  test_get.py  test_healthcheck.py  test_scan.py  test_search.py  test_stats.py  test_taxonomy.py  test_transactional_history.py  test_transactionalhistory.py  test_zoning.py
