
[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "pyjudilibre"
version = "0.5.10"
description = "Python client for the JUDILIBRE public API"
readme = "README.md"
license = {file = 'LICENSE'}
requires-python = ">=3.9"
authors = [{ name = "Paul", email = "you@example.com" }]
dependencies = [
  "pydantic>=2.10.2", 
  "requests==2.31.0", 
  "httpx==0.28.1",
  "python-dotenv==1.1.1",
]

[project.optional-dependencies]
dev = [
  "isort==6.0.1",
  "ruff==0.12.8",
]
build = [
  "twine<=6.0.1",
  "build",
]
test = [
  "pytest==8.4.1",
]

[project.urls]
Homepage = "https://github.com/yourname/pyjudilibre"
Issues   = "https://github.com/yourname/pyjudilibre/issues"

# Tell Hatchling where your package lives
[tool.hatch.build.targets.wheel]
packages = ["lib/pyjudilibre"]

# (Optional) tighten what goes into sdist
[tool.hatch.build.targets.sdist]
include = [
  "README.md",
  "LICENSE",
  "lib/pyjudilibre",
]