
[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "pyjudilibre"
version = "0.7.3"
description = "Python client for the JUDILIBRE public API"
readme = "README.md"
license = {file = 'LICENSE'}
requires-python = ">=3.9"
authors = [{ name = "Paul", email = "you@example.com" }]
dependencies = [
  "pydantic>=2.10.2", 
  "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
  "isort==6.0.1",
  "ruff==0.12.8",
  "mypy>=1.17.1",
  "bump-my-version==1.2.1",
  "jupyterlab==4.4.5",
]
build = [
  "twine<=6.0.1",
  "build",
]
test = [
  "pytest==8.4.1",
  "python-dotenv==1.1.1",
]
doc = [
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.6.16",
  "mkdocstrings-python>=1.16.12",
]

[project.urls]
Homepage = "https://github.com/pauldechorgnat/pyjudilibre"
Issues   = "https://github.com/pauldechorgnat/pyjudilibre/issues"

# Tell Hatchling where your package lives
[tool.hatch.build.targets.wheel]
packages = ["lib/pyjudilibre"]

# (Optional) tighten what goes into sdist
[tool.hatch.build.targets.sdist]
include = [
  "README.md",
  "LICENSE",
  "lib/pyjudilibre",
]